Fixes #4710 - Chat overview has a scrollbar.

--- a/app/assets/stylesheets/zammad.scss
+++ b/app/assets/stylesheets/zammad.scss
@@ -11880,7 +11880,8 @@ output {
   }
 
   .page-header {
-    margin: 15px 6px 5px;
+    margin: 15px 0 5px;
+    padding: 0 6px;
 
     @include phone {
       flex-wrap: wrap;
